# api_anything

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_test.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  crypto.rs  error.rs  lib.rs  models.rs
crates/compensation/: Cargo.toml
crates/compensation/src/: alert_manager.rs  config.rs  dead_letter.rs  idempotency.rs  lib.rs  push_dispatcher.rs  request_logger.rs  retry_worker.rs
crates/compensation/tests/: request_logger_test.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: bus.rs  config.rs  event_types.rs  factory.rs  kafka.rs  lib.rs  pg.rs
crates/event-bus/tests/: event_bus_test.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: adapter.rs  dispatcher.rs  error_normalizer.rs  lib.rs  loader.rs  metrics.rs  output_parser.rs  plugin_loader.rs  router.rs  types.rs  xml_json.rs
crates/gateway/src/adapters/: cli_process.rs  mod.rs  pty_expect.rs  soap.rs  ssh_pool.rs  ssh_remote.rs
crates/gateway/src/protection/: circuit_breaker.rs  mod.rs  rate_limiter.rs  semaphore.rs
crates/generator/: Cargo.toml
crates/generator/src/: agent_prompt.rs  changelog.rs  lib.rs  openapi.rs  pipeline.rs  shadow_test.rs  unified_contract.rs
crates/generator/src/cli_help/: mapper.rs  parser.rs
crates/generator/src/codegen/: compiler.rs  mod.rs  prompts.rs  reference_plugins.rs  scaffold.rs
crates/generator/src/llm/: claude.rs  client.rs  gemini.rs  mod.rs  openai.rs
crates/generator/src/ssh_sample/: mapper.rs  mod.rs  parser.rs
crates/generator/src/wsdl/: llm_mapper.rs  mapper.rs  mod.rs  parser.rs
crates/generator/tests/: pipeline_test.rs
crates/generator/tests/fixtures/: calculator.wsdl  calculator.wsdl.openapi.json  mock-report-gen.sh  multi_port.wsdl  sample_help.txt  sample_subcommand_help.txt  ssh_sample.txt
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs  pg.rs  repo.rs
crates/metadata/src/migrations/: 20260321000000_initial_schema.sql  20260322000000_events_table.sql  20260322000001_webhook_subscriptions.sql
crates/metadata/tests/: route_query_test.rs  write_methods_test.rs
crates/platform-api/: Cargo.toml
crates/platform-api/src/: lib.rs  main.rs  state.rs
crates/platform-api/src/middleware/: auth_guard.rs  error_handler.rs  mod.rs  tracing_mw.rs
crates/platform-api/src/routes/: compensation.rs  docs.rs  gateway.rs  health.rs  mod.rs  plugins.rs  projects.rs  recordings.rs  sandbox.rs  sandbox_sessions.rs  webhooks.rs  ws.rs
crates/platform-api/tests/: compensation_test.rs  docs_test.rs  e2e_cli_full_chain.rs  e2e_cli_proxy_test.rs  e2e_compensation_full.rs  e2e_docs_comprehensive.rs  e2e_phase6_features.rs  e2e_protection.rs  e2e_sandbox_full.rs  e2e_sandbox_test.rs  e2e_security.rs  e2e_soap_full_chain.rs  e2e_soap_proxy_test.rs  gateway_loader_test.rs  gateway_test.rs  health_test.rs  integration_full_lifecycle.rs  projects_test.rs  sandbox_session_test.rs  webhook_test.rs
crates/platform-api/tests/common/: mod.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  mock_layer.rs  proxy_layer.rs  recorder.rs  replay_layer.rs  session.rs
crates/sandbox/tests/: replay_test.rs
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
docker/: docker-compose.yml  init-kafka-topics.sh  otel-collector-config.yml  prometheus.yml  tempo-config.yml
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/dashboards/json/: gateway-overview.json
docker/grafana/provisioning/datasources/: datasources.yml
docs/: deployment-guide.md  e2e-test-plan.md  feature-completion-report.md  gap-implementation-plan.md  manual-testing-handbook.md  remaining-features-design.md  user-manual.md
docs/superpowers/plans/: 2026-03-21-phase0-infrastructure.md  2026-03-21-phase1a-gateway-runtime.md  2026-03-21-phase1b-wsdl-soap-adapter.md  2026-03-21-phase1c-live-gateway-llm.md  2026-03-21-phase2a-cli-adapter.md  2026-03-21-phase2b-ssh-adapter.md  2026-03-22-phase3-sandbox.md  2026-03-22-phase4-compensation.md  2026-03-22-phase5a-pty-docs.md  2026-03-22-phase5b-web-portal.md  2026-03-22-phase6-completion.md
docs/superpowers/specs/: 2026-03-21-api-anything-platform-design.md
docs/test-data/: complex-cli-devops.txt  complex-cli-devops.txt.openapi.json  complex-cli-help.txt  complex-cli-help.txt.openapi.json  complex-cli-subcommand-help.txt  complex-order-service.wsdl  complex-order-service.wsdl.openapi.json  complex-pty-redis.txt  complex-pty-redis.txt.openapi.json  complex-soap-banking.wsdl  complex-soap-banking.wsdl.openapi.json  complex-ssh-router.txt  complex-ssh-router.txt.openapi.json  mock-db-tool.sh  network-switch-ssh.txt  network-switch-ssh.txt.openapi.json  odata-metadata.xml  odata-metadata.xml.openapi.json  openapi-petstore.yaml  openapi-petstore.yaml.openapi.json  pty-database-repl.txt  pty-database-repl.txt.openapi.json  server-management-ssh.txt  server-management-ssh.txt.openapi.json
scripts/: run-codegen-tests.sh  run-e2e-tests.sh
specs/: instruction.md
web/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: Layout.tsx
web/src/hooks/: useWebSocket.ts
web/src/pages/: ApiDocs.tsx  ApiExplorer.tsx  CompensationManager.tsx  Dashboard.tsx  Monitoring.tsx  RecordingsViewer.tsx  SandboxManager.tsx  WebhookManager.tsx
