[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/metadata",
    "crates/platform-api",
    "crates/cli",
    "crates/gateway",
    "crates/generator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Kafka
rdkafka = { version = "0.37", features = ["cmake-build"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# Common utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }

# Testing
assert-json-diff = "2"

# Gateway
arc-swap = "1"
dashmap = "6"

# XML parsing
quick-xml = { version = "0.37", features = ["serialize"] }

# Regex
regex = "1"
