[package]
name = "api-anything-compensation"
version.workspace = true
edition.workspace = true

[dependencies]
api-anything-common = { path = "../common" }
api-anything-metadata = { path = "../metadata" }
api-anything-gateway = { path = "../gateway" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
dashmap.workspace = true
axum.workspace = true
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
sqlx.workspace = true
dotenvy = "0.15"
tokio = { workspace = true, features = ["full"] }
