[package]
name = "api-anything-event-bus"
version.workspace = true
edition.workspace = true

[features]
default = []
kafka = ["rdkafka"]

[dependencies]
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true

rdkafka = { workspace = true, optional = true }

[dev-dependencies]
dotenvy = "0.15"
tokio = { workspace = true, features = ["full"] }
