[package]
name = "api-anything-generator"
version.workspace = true
edition.workspace = true

[dependencies]
api-anything-common = { path = "../common" }
api-anything-metadata = { path = "../metadata" }
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
tokio.workspace = true

[dev-dependencies]
sqlx.workspace = true
dotenvy = "0.15"
