[package]
name = "api-anything-platform-api"
version.workspace = true
edition.workspace = true

[dependencies]
api-anything-common = { path = "../common" }
api-anything-metadata = { path = "../metadata" }
api-anything-gateway = { path = "../gateway" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
dashmap.workspace = true

[dev-dependencies]
# axum-test 17+ 才支持 axum 0.8；16.x 依赖 axum 0.7，与工作区不兼容
axum-test = "17"
assert-json-diff.workspace = true
