[package]
name = "api-anything-platform-api"
version.workspace = true
edition.workspace = true

[dependencies]
api-anything-common = { path = "../common" }
api-anything-metadata = { path = "../metadata" }
api-anything-gateway = { path = "../gateway" }
api-anything-sandbox = { path = "../sandbox" }
api-anything-compensation = { path = "../compensation" }
api-anything-plugin-sdk = { path = "../plugin-sdk" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
dashmap.workspace = true

[dev-dependencies]
# axum-test 17+ 才支持 axum 0.8；16.x 依赖 axum 0.7，与工作区不兼容
axum-test = "17"
assert-json-diff.workspace = true
# wiremock 用于 E2E 测试中模拟 SOAP 后端，无需真实外部服务
wiremock = "0.6"
# generator 和 gateway 作为 dev 依赖，仅 E2E 测试需要完整的流水线调用；
# 两者均已存在于工作区 workspace，此处仅声明路径引用
api-anything-generator = { path = "../generator" }
api-anything-gateway = { path = "../gateway" }
